# mpi-compute

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.py  pyproject.toml
code-stu/: 1-1.cpp  1-10.cpp  1-11.cpp  1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp  1-6.cpp  1-7.cpp  1-8.cpp  1-9.cpp  2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  3-1.cpp  3-2.1.cpp  3-2.cpp  3-3.1.cpp  3-3.cpp  3-4.cpp  3-5.cpp  3-6.cpp  3-7.1.cpp  3-7.cpp  4-1.cpp  4-2.cpp  4-3.cpp  4-4.cpp  4-5.cpp  4-6.cpp  4-7.cpp  5-1.cu  CMakeLists.txt  Pi-v1.c  Pi-v2.c  Pi.c  http-helloworld.cpp  (+14 more)
code-tec/: 2025-4-24.cpp  2025-4-24a.cpp  2025-4-25.cpp  2025-4-25a.cpp  2026-3-1.cpp  2026-3-10.cpp  2026-3-11.cpp  2026-3-12.cpp  2026-3-13.cpp  2026-3-14.cpp  2026-3-15.cpp  2026-3-16.cpp  2026-3-17.cpp  2026-3-18.cpp  2026-3-2.cpp  2026-3-3.cpp  2026-3-4.cpp  2026-3-5.cpp  2026-3-6.cpp  2026-3-7.cpp  2026-3-8.cpp  2026-3-9.cpp  2026-4-1.cpp  2026-4-10.cpp  2026-4-11.cpp  2026-4-12.cpp  2026-4-13.cpp  2026-4-14.cpp  2026-4-15.cpp  2026-4-16.cpp  2026-4-17.cpp  2026-4-18.cpp  2026-4-19.cpp  2026-4-2.cpp  2026-4-20.cpp  2026-4-21.cpp  2026-4-22.cpp  2026-4-23.cpp  2026-4-3.cpp  2026-4-4.cpp  (+25 more)
data/: .gitkeep
docs/: design.md  requirements.md  v0_0_1.md
include/: checkpoint.hpp  dataset.hpp  json_config.hpp  kmeans.hpp  kmeans_kernels.cuh  output_writer.hpp  path_util.hpp  types.hpp
result_log/: result_20260607_093841.txt
script/: CMakeLists.txt  check_env.cpp  dat_out.cpp  keep.py  render.py  show.py  testrc.cpp
src/: CMakeLists.txt  checkpoint.cpp  config.json  dataset.cpp  json_config.cpp  kmeans.cpp  kmeans_kernels.cu  kmeans_omp.cpp  kmeans_sequential.cpp  main.cpp  output_writer.cpp
src/kmeans/: kernels.cu  omp.cpp  sequential.cpp
